# gramtools

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENCE  MANIFEST.in  Makefile  README  README.md  build.py  build.sh  conanfile.txt  gramtools.py  hello.cpp  hello.h  hello_unittest.cpp  infer.py  install.sh  setup.cfg  setup.py  test  travis_build.sh  utils.py  wabi_paper.txt
libgramtools/: CMakeLists.txt
libgramtools/include/: bidir_search_bwd.hpp  bwt_search.hpp  coverage_analysis.hpp  definitions.hpp  dna_ranks.hpp  fm_index.hpp  kmer_index.hpp  kmer_index_types.hpp  kmers.hpp  main.hpp  map.hpp  masks.hpp  parameters.hpp  prg.hpp  ranks.hpp  search.hpp  search_states.hpp  search_types.hpp  skip.hpp  timer_report.hpp  utils.hpp
libgramtools/include/common/: data_types.hpp  file_read.hpp  parameters.hpp  random.hpp  read_stats.hpp  timer_report.hpp  utils.hpp
libgramtools/include/genotype/: genotype.hpp  parameters.hpp  read_stats.hpp
libgramtools/include/genotype/infer/: allele_extracter.hpp  genotyped_site.hpp  genotyping_models.hpp  infer.hpp  interfaces.hpp  json_spec.hpp  personalised_reference.hpp  probabilities.hpp  types.hpp
libgramtools/include/genotype/quasimap/: quasimap.hpp
libgramtools/include/kmer_index/: build.hpp  dump.hpp  kmer_index.hpp  kmer_index_types.hpp  kmers.hpp  load.hpp  masks.hpp  parse.hpp
libgramtools/include/prg/: coverage_graph.hpp  dna_ranks.hpp  fm_index.hpp  linearised_prg.hpp  load_PRG_string.hpp  make_data_structures.hpp  masks.hpp  prg.hpp  prg_info.hpp  types.hpp
libgramtools/include/quasimap/: parameters.hpp  quasimap.hpp  search_types.hpp  utils.hpp
libgramtools/include/quasimap/coverage/: allele_base.hpp  allele_sum.hpp  common.hpp  grouped_allele_counts.hpp  types.hpp
libgramtools/include/quasimap/search/: BWT_search.hpp  encapsulated_search.hpp  vBWT_jump.hpp
libgramtools/include/search/: search.hpp  search_types.hpp
libgramtools/include/sequence_read/: seq_file.h  seqread.hpp  stream_buffer.h
libgramtools/include/simulate/: induce_genotypes.hpp  parameters.hpp  simulate.hpp
libgramtools/lib/: boost.cmake  htslib.cmake  json.cmake  protobuf.cmake  sdsl.cmake  zlib.cmake
libgramtools/lib/GCP/: GCP.h
libgramtools/src/: bidir_search.cpp  bidir_search_bwd.cpp  coverage_analysis.cpp  dna_ranks.cpp  fm_index.cpp  kmer_index.cpp  kmers.cpp  main.cpp  map.cpp  masks.cpp  prg.cpp  ranks.cpp  search.cpp  skip.cpp  timer_report.cpp  utils.cpp
libgramtools/src/common/: file_read.cpp  parameters.cpp  random.cpp  read_stats.cpp  timer_report.cpp  utils.cpp
libgramtools/src/coverage/: analysis.cpp
libgramtools/src/genotype/: genotype.cpp  parameters.cpp  read_stats.cpp
libgramtools/src/genotype/infer/: allele_extracter.cpp  genotyped_site.cpp  infer.cpp  interfaces.cpp  json_spec.cpp  level_genotyper.cpp  personalised_reference.cpp  probabilities.cpp
libgramtools/src/genotype/quasimap/: quasimap.cpp
libgramtools/src/kmer_index/: build.cpp  dump.cpp  kmer_index.cpp  kmers.cpp  load.cpp  masks.cpp  parse.cpp
libgramtools/src/prg/: coverage_graph.cpp  dna_ranks.cpp  fm_index.cpp  linearised_prg.cpp  load_PRG_string.cpp  make_data_structures.cpp  masks.cpp  prg.cpp  prg_info.cpp
libgramtools/src/quasimap/: parameters.cpp  quasimap.cpp  utils.cpp
libgramtools/src/quasimap/coverage/: allele_base.cpp  allele_sum.cpp  common.cpp  grouped_allele_counts.cpp
libgramtools/src/quasimap/search/: BWT_search.cpp  encapsulated_search.cpp  vBWT_jump.cpp
libgramtools/src/search/: search.cpp
libgramtools/src/simulate/: induce_genotypes.cpp  parameters.cpp  simulate.cpp
libgramtools/submods/: CMakeLists.txt  README.md  combine_jvcfs.cpp  encode_prg.cpp  print_fm_index.cpp  submod_resources.cpp  submod_resources.hpp  visualise_prg.cpp
libgramtools/submods/encode_prg/: CMakeLists.txt  encode_prg  encode_prg.cpp
libgramtools/submods/print_fm_index/: CMakeLists.txt  print_fm_index.cpp
libgramtools/submods/src_common/: common.cpp  common.hpp  generate_prg.cpp  generate_prg.hpp  submod_resources.cpp  submod_resources.hpp
libgramtools/submods/tests/: CMakeLists.txt  common.cpp  common.hpp  test_search.cpp  test_simulate.cpp  test_utils.cpp
libgramtools/submods/tests/common/: common.cpp  common.hpp  mocks.hpp
libgramtools/submods/tests/genotype/: test_genotype.cpp  test_read_stats.cpp
libgramtools/submods/tests/kmer_index/: test_build.cpp  test_dump.cpp  test_kmers.cpp  test_load.cpp
libgramtools/submods/tests/prg/: test_covGraph.cpp  test_masks.cpp  test_prg.cpp
libgramtools/submods/tests/quasimap/: test_quasimap.cpp
libgramtools/submods/tests/test_data/: tmp.ar
libgramtools/submods/tests/test_resources/: test_resources.cpp
libgramtools/tests/: CMakeLists.txt  bidir_search_unittest.cpp  common.cpp  common.hpp  test_bidir_search.cpp  test_bidir_search_bwd.cpp  test_bidir_search_slow.cpp  test_coverage_analysis.cpp  test_kmer_index.cpp  test_kmers.cpp  test_map.cpp  test_masks.cpp  test_prg.cpp  test_search.cpp  test_simulate.cpp  test_utils.cpp  test_utils.hpp
libgramtools/tests/coverage/: test_analysis.cpp
libgramtools/tests/genotype/: test_read_stats.cpp
libgramtools/tests/genotype/infer/: mocks.hpp  test_allele_extracter.cpp  test_interfaces.cpp  test_json_spec.cpp  (+3 more)
libgramtools/tests/kmer_index/: test_build.cpp  test_dump.cpp  test_kmer_index.cpp  test_kmers.cpp  test_load.cpp  test_parse.cpp
libgramtools/tests/prg/: test_covGraph.cpp  test_linearised_prg.cpp  test_make_data_structures.cpp  test_masks.cpp  test_prg.cpp
libgramtools/tests/quasimap/: test_quasimap.cpp
libgramtools/tests/test_cases/: One_match_many_sites.txt  match_within_long_site.txt  match_within_long_site_mask_a.txt  multiple_matches_multiple_sites.txt  two_long_sites_mask_a.txt  two_matches_var_other_allele_nonvar.txt  two_snps.txt  two_snps_mask_a.txt
libgramtools/tests/test_data/: ref2.fa  test1.vcf  testmarkers
libgramtools/tests/test_resources/: mocks.hpp  test_resources.cpp  test_resources.hpp  types.hpp
(+371 files in other folders)
