[metadata]
name = gramtools
author = Brice Letcher
author_email = bletcher@ebi.ac.uk
version = 1.9.0
description = Genome inference and genotyping with genome graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iqbal-lab-org/gramtools
licence = MIT
licence_file = LICENCE

[options]
packages = find:
include_package_data = True
install_requires =
    biopython == 1.76
    Cython == 0.29.16
    pysam == 0.15.4
    cluster_vcf_records >= 0.9.2
python_requires = >=3.6

[options.entry_points]
console_scripts =
    gramtools = gramtools.gramtools_main:run
